--- a/ssl-source.yaml
+++ b/ssl-source.yaml
@@ -11,33 +11,34 @@ Parameters:
     Type: String
     NoEcho: true
 Resources:
-  controller0Config:
-    Type: AWS::AutoScaling::LaunchConfiguration
-    Metadata:
-      stunnel:
-        cert:
-          Ref: SSLCertificate
-        key:
-          Ref: SSLKey
-        ports:
-         - name: 'ec2'
-           accept: 13773
-           connect: 8773
-         - name: 'image'
-           accept: 13292
-           connect: 9292
-         - name: 'identity'
-           accept: 13000
-           connect: 5000
-         - name: 'network'
-           accept: 13696
-           connect: 9696
-         - name: 'compute'
-           accept: 13774
-           connect: 8774
-         - name: 'swift-proxy'
-           accept: 13080
-           connect: 8080
-         - name: 'cinder'
-           accept: 13776
-           connect: 8776
+  SSLConfig:
+    Type: OS::Heat::StructuredConfig
+    Properties:
+      config:
+        stunnel:
+          cert:
+            get_input: ssl_certificate
+          key:
+            get_input: ssl_key
+          ports:
+           - name: 'ec2'
+             accept: 13773
+             connect: 8773
+           - name: 'image'
+             accept: 13292
+             connect: 9292
+           - name: 'identity'
+             accept: 13000
+             connect: 5000
+           - name: 'network'
+             accept: 13696
+             connect: 9696
+           - name: 'compute'
+             accept: 13774
+             connect: 8774
+           - name: 'swift-proxy'
+             accept: 13080
+             connect: 8080
+           - name: 'cinder'
+             accept: 13776
+             connect: 8776
