--- a/swift-source.yaml
+++ b/swift-source.yaml
@@ -1,52 +1,16 @@
-Description: 'Swift-common: OpenStack object storage common configurations'
-Parameters:
-  SwiftHashSuffix:
-    Default: unset
-    Description: A random string to be used as a salt when hashing to determine mappings in the ring.
-    Type: String
-    NoEcho: true
-  SwiftPassword:
-    Default: unset
-    Description: The password for the swift service account, used by the swift proxy services.
-    Type: String
-    NoEcho: true
 Resources:
-  controller0Config:
-    Type: AWS::AutoScaling::LaunchConfiguration
-    Metadata:
-      swift:
-        devices:
-          Fn::Join:
-          - ', '
-          - - Fn::Join:
-              - ''
-              - - 'r1z1-'
-                - Fn::Select:
-                  - 0
-                  - Fn::Select:
-                    - 'ctlplane'
-                    - Fn::GetAtt:
-                      - controller0
-                      - networks
-                - ':%PORT%/d1'
-            - Fn::Join:
-              - ', '
-              - Merge::Map:
-                  SwiftStorage0:
-                    Fn::Join:
-                    - ''
-                    - - 'r1z1-'
-                      - Fn::Select:
-                        - 0
-                        - Fn::Select:
-                          - 'ctlplane'
-                          - Fn::GetAtt:
-                            - SwiftStorage0
-                            - networks
-                      - ':%PORT%/d1'
-        hash:
-          Ref: SwiftHashSuffix
-        part-power: 10
-        replicas: 1
-        service-password:
-          Ref: SwiftPassword
+  SwiftConfig:
+    Type: OS::Heat::StructuredConfig
+    Properties:
+      config:
+        swift:
+          devices: { get_input: swift_devices }
+          hash: { get_input: swift_hash_suffix }
+          part-power: 10
+          replicas: 1
+          service-password: { get_input: swift_password }
+        neutron:
+          enable_tunnelling: {Ref: NeutronEnableTunnelling}
+          tenant_network_type: {Ref: NeutronNetworkType}
+          ovs:
+            local_ip: { get_input: neutron_local_ip }
