--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -114,28 +114,6 @@ Parameters:
     Description: The image ID for live-updates to the overcloud compute nodes.
     Default: ''
 Resources:
-  ComputeAccessPolicy:
-    Type: OS::Heat::AccessPolicy
-    Properties:
-      AllowedResources: [ NovaCompute0 ]
-  ComputeUser:
-    Type: AWS::IAM::User
-    Properties:
-      Policies: [ { Ref: ComputeAccessPolicy } ]
-  NovaCompute0Key:
-    Type: AWS::IAM::AccessKey
-    Properties:
-      UserName:
-        Ref: ComputeUser
-  NovaCompute0CompletionCondition:
-    Type: AWS::CloudFormation::WaitCondition
-    DependsOn: controller0Config
-    Properties:
-      Handle: {Ref: NovaCompute0CompletionHandle}
-      Count: '1'
-      Timeout: '1800'
-  NovaCompute0CompletionHandle:
-    Type: AWS::CloudFormation::WaitConditionHandle
   NovaCompute0:
     Type: OS::Nova::Server
     Properties:
@@ -145,79 +123,43 @@ Resources:
         Ref: ImageUpdatePolicy
       flavor: {Ref: OvercloudComputeFlavor}
       key_name: {Ref: KeyName}
-    Metadata:
-      os-collect-config:
-        cfn:
-          access_key_id:
-            Ref: NovaCompute0Key
-          secret_access_key:
-            Fn::GetAtt: [ NovaCompute0Key, SecretAccessKey ]
-          stack_name: {Ref: 'AWS::StackName'}
-          path: NovaCompute0Config.Metadata
-      OpenStack::ImageBuilder::Elements: [ nova-compute ]
-  NovaCompute0Config:
-    Type: AWS::AutoScaling::LaunchConfiguration
+      user_data_format: SOFTWARE_CONFIG
+  NovaCompute0Deploy:
+    Type: OS::Heat::StructuredDeployment
     Properties:
-      InstanceType: '0'
-      ImageId: '0'
-    Metadata:
-      completion-handle:
-        Ref: NovaCompute0CompletionHandle
-      os-collect-config:
-        cfn:
-          access_key_id:
-            Ref: NovaCompute0Key
-          secret_access_key:
-            Fn::GetAtt: [ NovaCompute0Key, SecretAccessKey ]
-          stack_name: {Ref: 'AWS::StackName'}
-          path: NovaCompute0Config.Metadata
-      nova:
-        compute_driver: {Ref: NovaComputeDriver}
-        compute_libvirt_type: {Ref: NovaComputeLibvirtType}
-        db: {Ref: NovaDSN}
-        host: {Ref: NovaApiHost}
-        service-password:
-          Ref: NovaPassword
-      ceilometer:
-        db: {Ref: CeilometerDSN}
-        metering_secret: {Ref: CeilometerMeteringSecret}
-        service-password: {Ref: CeilometerPassword}
-        compute_agent: {Ref: CeilometerComputeAgent}
-      glance:
-        host: {Ref: GlanceHost}
-      hosts: {Ref: StaticHosts}
-      keystone:
-        host: {Ref: KeystoneHost}
-      neutron:
-        flat-networks: {Ref: NeutronFlatNetworks}
-        host: {Ref: NeutronHost}
-        ovs_db: {Ref: NeutronDSN}
-        ovs:
-          local_ip:
-            Fn::Select:
-              - 0
-              - Fn::Select:
-                - ctlplane
-                - Fn::GetAtt:
-                  - NovaCompute0
-                  - networks
-          tenant_network_type: {Ref: NeutronNetworkType}
-          network_vlan_ranges: {Ref: NeutronNetworkVLANRanges}
-          bridge_mappings: {Ref: NeutronBridgeMappings}
-          enable_tunneling: {Ref: NeutronEnableTunnelling}
-          physical_bridge: {Ref: NeutronPhysicalBridge}
-          public_interface: {Ref: NeutronPublicInterface}
-        service-password:
-          Ref: NeutronPassword
-      admin-password: {Ref: AdminPassword}
-      rabbit:
-        host: {Ref: RabbitHost}
-        username: {Ref: RabbitUserName}
-        password: {Ref: RabbitPassword}
-      live-update:
-        host: {Ref: LiveUpdateHost}
-        username: {Ref: LiveUpdateUserName}
-        password: {Ref: LiveUpdatePassword}
-        tenant-name: {Ref: LiveUpdateTenantName}
-        base_image_id: {Ref: NovaImage}
+      config: {Ref: NovaComputeConfig}
+      server: {Ref: NovaCompute0}
+      input_values:
+        nova_compute_driver: {Ref: NovaComputeDriver}
+        nova_compute_libvirt_type: {Ref: NovaComputeLibvirtType}
+        nova_dsn: {Ref: NovaDSN}
+        nova_api_host: {Ref: NovaApiHost}
+        nova_password: {Ref: NovaPassword}
+        ceilometer_dsn: {Ref: CeilometerDSN}
+        ceilometer_metering_secret: {Ref: CeilometerMeteringSecret}
+        ceilometer_password: {Ref: CeilometerPassword}
+        ceilometer_compute_agent: {Ref: CeilometerComputeAgent}
+        glance_host: {Ref: GlanceHost}
+        static_hosts: {Ref: StaticHosts}
+        keystone_host: {Ref: KeystoneHost}
+        neutron_flat_networks: {Ref: NeutronFlatNetworks}
+        neutron_host: {Ref: NeutronHost}
+        neutron_dsn: {Ref: NeutronDSN}
+        neutron_local_ip: {"Fn::Select": [ 0, "Fn::Select": [ ctlplane, { "Fn::GetAtt": [ NovaCompute0, networks ]}]]}
+        neutron_tenant_network_type: {Ref: NeutronNetworkType}
+        neutron_network_vlan_ranges: {Ref: NeutronNetworkVLANRanges}
+        neutron_bridge_mappings: {Ref: NeutronBridgeMappings}
+        neutron_enable_tunneling: {Ref: NeutronEnableTunnelling}
+        neutron_physical_bridge: {Ref: NeutronPhysicalBridge}
+        neutron_public_interface: {Ref: NeutronPublicInterface}
+        neutron_password: {Ref: NeutronPassword}
+        admin_password: {Ref: AdminPassword}
+        rabbit_host: {Ref: RabbitHost}
+        rabbit_username: {Ref: RabbitUserName}
+        rabbit_password: {Ref: RabbitPassword}
+        live_update_host: {Ref: LiveUpdateHost}
+        live_update_username: {Ref: LiveUpdateUserName}
+        live_update_password: {Ref: LiveUpdatePassword}
+        live_update_tenant_name: {Ref: LiveUpdateTenantName}
+        nova_image: {Ref: NovaImage}
         live_update_image_id: {Ref: LiveUpdateComputeImage}
