Adding image update policy to undercloud template
Allows image policy to be specified when updating the undercloud
stack. This enables the preservation of persistent ephemeral disks.

Change-Id: Id7bc0a72ae1737d2fdadb3f47006bd0cfb0bc42f
Closes-Bug: #1295616

--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -41,6 +41,11 @@ Parameters:
     Description: The password for the Heat service account, used by the Heat services.
     Type: String
     NoEcho: true
+  ImageUpdatePolicy:
+    Default: REPLACE
+    Description: What policy to use when reconstructing instances. REBUILD for rebuilds,
+      REBUILD_PRESERVE_EPHEMERAL to preserve /mnt.
+    Type: String
   undercloudImage:
     Default: undercloud
     Type: String
@@ -232,6 +237,8 @@ Resources:
         Ref: Flavor
       key_name:
         Ref: KeyName
+      image_update_policy:
+        Ref: ImageUpdatePolicy
     Metadata:
       os-collect-config:
         cfn:
