Fix Ironic templates
The merge of ironic-source wasn't actually merging, leading to bad
templates. As part of this add the needed SSH virtual power key
(because like nova-bm, Ironic requires that for now).

We also need to set the compute_manager for nova with Ironic, so that
gets set too.

Change-Id: I0d7d535dbac3584b3eb12865259ee6403e20c98f

--- a/undercloud-vm-ironic-source.yaml
+++ b/undercloud-vm-ironic-source.yaml
@@ -1,15 +1,30 @@
 Parameters:
+  IronicPassword:
+    Type: String
+    Description: Ironic password for keystone access
+    NoEcho: true
   NeutronPublicInterface:
     Default: eth0
     Description: What interface to bridge onto br-ex for network nodes.
     Type: String
+  PowerSSHPrivateKey:
+    Description: Private key for using to ssh to a virtual power host.
+    Type: String
+    NoEcho: true
 Resources:
   undercloudConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     Metadata:
+      ironic:
+        db: mysql://ironic:unset@localhost/ironic
+        service-password:
+          Ref: IronicPassword
+        virtual_power_ssh_key:
+          Ref: PowerSSHPrivateKey
       nova:
         compute_hostname: undercloud
         compute_driver: ironic.nova.virt.ironic.driver.IronicDriver
+        compute_manager: ironic.nova.compute.manager.ClusteredComputeManager
         db: mysql://nova:unset@localhost/nova
         default_ephemeral_format: ext4
         host: 127.0.0.1
