Update templates to default to preserve ephemeral
Updated heat templates to default to preserve ephemeral partition
on a heat stack update. Allows undercloud and overcloud to be
re-imaged/updated and state preserved.

Change-Id: I6626af48d8c55672022a46fe48e5725ad2619f0c

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -15,7 +15,7 @@ Parameters:
     Type: String
     Default: baremetal
   ImageUpdatePolicy:
-    Default: 'REPLACE'
+    Default: 'REBUILD_PRESERVE_EPHEMERAL'
     Description: What policy to use when reconstructing instances. REBUILD for rebuilds, REBUILD_PRESERVE_EPHEMERAL to preserve /mnt.
     Type: String
   NovaImage:
