--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -44,7 +44,7 @@ Parameters:
     Type: String
     NoEcho: true
   ImageUpdatePolicy:
-    Default: 'REPLACE'
+    Default: 'REBUILD_PRESERVE_EPHEMERAL'
     Description: What policy to use when reconstructing instances. REBUILD for rebuilds, REBUILD_PRESERVE_EPHEMERAL to preserve /mnt.
     Type: String
   KeyName:
